crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-new-target-meta-property/error.txt
Found 1 error:

Todo: (BuildHIR::lowerExpression) Handle MetaProperty expressions other than import.meta

error.todo-new-target-meta-property.ts:4:13
  2 |
  3 | function foo() {
> 4 |   const nt = new.target;
    |              ^^^^^^^^^^ (BuildHIR::lowerExpression) Handle MetaProperty expressions other than import.meta
  5 |   return <Stringify value={nt} />;
  6 | }
  7 |
